// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expense summary with 1 expense 1`] = `
<h1>
  Viewing 
  1
   
  expense
   totalling 
  $0.95
</h1>
`;

exports[`should render expense summary with multiple expenses 1`] = `
<h1>
  Viewing 
  11
   
  expenses
   totalling 
  $1,112,222.95
</h1>
`;
